--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.19",
+    "axios": "^1.7.3",
     "pinia": "^2.1.7",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vuetify": "^3.6.14"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
